--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link rel="stylesheet" href="bundle.css">
+	<title>Schedule Creator</title>
 </head>
 <body>
-	<script src="bundle.js"></script>
 </body>
 </html>
